# docs

./: .buildpacks  .dockerignore  .flake8  .gitignore  .gitmodules  .hadolint.yaml  .mailmap  .mergify.yml  .pre-commit-config.yaml  .semgrepignore  .slugignore  .spectral.yaml  .yamllint.yml  Aptfile  Dockerfile  Procfile  README.md  alembic.ini  datadog-wrapper.sh  docker-build-dev.sh  docker-compose.yml  docker-security-scan.json  fake.env  poe.toml  poetry-workaround.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.sh  runtime.txt  tox.ini
.github/: CODEOWNERS  actionlint.yaml  clifus.yml  dependabot.yml  docker-security-reporter.yml  get-latest-datadog-agent-version.sh  get-latest-datadog-mergify-integration-version.py  get-latest-python-version.py  trivy-secret.yaml  trivy.yaml
.github/workflows/: api-schemas-upload.yaml  changelog.yaml  ci-record.yaml  ci-self-hosting.yaml  ci-target.yaml  ci-unsafe.yml  ci.yaml  clifus.yaml  cp-heroku-ghcr.yml  create-linear-for-docs.yaml  deps-conflicts-resolver.yaml  docker-label.yaml  docker-onpremise.yaml  docker-saas.yaml  docker.yaml  docs-upload-gcp-prod.yaml  docs-upload-gcp-temp.yaml  heroku.yaml  linear.yaml  linear.yml  mergify-configuration-openapi-spec-sync.yml  releaser.yaml  releaser.yml  security-scanner.yaml  security-scanner.yml  syncer.yml  testing-database-sync.yaml
.pre-commit-scripts/: launch_tests.sh  validate_docs.sh
datadog/: agent-version.txt  check.sh  datadog_mergify-0.0.1-py3-none-any.whl  prerun.sh
datadog/conf.d/: engine-web-process.yaml  engine-web.yaml  engine-worker-process.yaml  engine-worker.yaml  mergify.yaml  postgres.yaml  redisdb.yaml
db_migration/: README.md  env.py  script.py.mako
db_migration/versions/: 176199dd35b1_new_gha_models.py  298d2a2d31b7_drop_github_user_sequence.py  49d540f8edc6_first_migration_script.py  67aef78efbee_add_application_table.py  787e61eabca7_new_unknown_operating_system.py  b61249e451dc_create_ci_optimizer_tables.py  f22dca1d06a8_set_github_user_oauth_access_token_.py
dockerfiles/: Dockerfile.common  Dockerfile.onpremise  Dockerfile.onpremise.footer  Dockerfile.onpremise.header  Dockerfile.postgresql_anonymizer  Dockerfile.saas  anon-custom.sh  saas-worker.sh
docs/: mergify_engine_gendoc.py  package-lock.json  package.json
docs/source/: api-intro.rst  commands.rst  conditions.rst  conf.py  configuration.rst  examples.rst  faq.rst  getting-started.rst  global-substitutions.rst  spelling_wordlist.txt
installer/: asgi.py  package-lock.json  package.json
installer/src/: App.jsx
mergify_engine/: __init__.py  _datadog.py  admin.py  alembic_utils_workaround.py  asyncio_workaround.py  asynctimeout_workaround.py  branch_updater.py  cache.py  check_api.py  cli.py  condition_value_querier.py  config.py  constants.py  context.py  count_seats.py  crypto.py  dashboard.py  database.py  date.py  debug.py  delayed_refresh.py  dependabot_helpers.py  dependabot_types.py  duplicate_pull.py  engine_lock.py  event_forwarder.py  eventlogs.py  events.py  events_db.py  exceptions.py  filtered_github_types.py  github_events.py  github_graphql_types.py  github_types.py  gitter.py  import_check.py  jinja2_workaround.py  json.py  logs.py  pagination.py  (+15 more)
mergify_engine/actions/: __init__.py  assign.py  backport.py  close.py  comment.py  copy.py  delete_head_branch.py  dequeue.py  dismiss_reviews.py  edit.py  github_actions.py  label.py  merge.py  merge_base.py  post_check.py  queue.py  rebase.py  refresh.py  request_reviews.py  requeue.py  review.py  squash.py  unqueue.py  update.py  utils.py
mergify_engine/ci/: cost_calculator.py  download.py  dump.py  event_processing.py  job_registries.py  models.py  pull_registries.py  reports.py
mergify_engine/clients/: dashboard.py  github.py  github_app.py  google_cloud_storage.py  http.py  http_proxy.py  shadow_office.py
mergify_engine/config/: __init__.py  types.py  urls.py
mergify_engine/console_scripts/: __init__.py  account_suspend.py  admin_cli.py  connectivity_check.py  debug.py  devtools_cli.py  merge_queue.py  openapi_spec_generator.py  redis_dump.py  refresher.py  stream.py  subscription.py  test_db_events.py
mergify_engine/dashboard/: __init__.py  application.py  subscription.py  user_tokens.py
mergify_engine/engine/: __init__.py  actions_runner.py  commands_runner.py  queue_runner.py
mergify_engine/flaky_check/: __init__.py  utils.py
mergify_engine/github_in_postgres/: process_events.py  utils.py
mergify_engine/log_embedder/: github_action.py  log.py  log_cleaner.py  log_tag.py  openai_api.py  openai_embedding.py  utils.py
mergify_engine/middlewares/: content_length.py  logging.py  saas_addons.py  security.py  starlette_workaround.py  sudo.py
mergify_engine/models/: __init__.py  active_user.py  anonymizer.py  application_keys.py  ci_issue.py  enumerations.py  events.py  events_metadata.py  github_account.py  github_actions.py  github_repository.py  github_user.py  manage.py
mergify_engine/queue/: __init__.py  freeze.py  merge_train.py  pause.py  statistics.py  statistics_accuracy.py  utils.py
mergify_engine/redis_utils/: __init__.py  dumper.py
mergify_engine/rules/: __init__.py  checks_status.py  conditions.py  filter.py  generic_evaluator.py  live_resolvers.py  parser.py  types.py  types_dummy_context.py
mergify_engine/tests/: __init__.py  bridge.py  conftest.py  openai_embedding_dataset.py  tardis.py  utils.py
mergify_engine/usage/: last_seen.py
mergify_engine/web/: asgi.py  asgi_testing.py  auth.py  dashboard.py  github.py  github_webhook.py  healthcheck.py  (+6 more)
onpremise/: Procfile  entrypoint.sh
public/: mergify-configuration-openapi.json
tests/: buildpack.toml.tmpl  prepare-legacy-buildpacks.sh
tools/: brew-requirements.sh  build-api-schemas.sh  build-docs.sh  build-production-database-base-url.sh  check-obsolete-fixtures.sh  compare-github-requests.sh  docker-build-dev.sh  fixtures-msgpack-to-yml.py  fixtures-yml-to-msgpack.py  import-checks.sh  pg_url_to_env.py  poetry-ci-install.sh  run-alembic-revision.sh  run-testing-database-sync.sh  run-tests.sh  serve.sh
(+3726 files in other folders)
