[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mergify_engine"
version = "0.0.0"
description = "mergify is a GitHub Application to automate pull requests"
classifiers = ["Intended Audience :: Information Technology", "License :: OSI Approved :: Apache Software License", "Operating System :: POSIX", "Programming Language :: Python", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11"]
homepage = "https://github.com/mergifyio/engine"
authors = ["Mergify <hello@mergify.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
aiofiles = "*"
cryptography = "*"
daiquiri = ">=3"
datadog = "*"
ddtrace = ">=1.7.2"
fastapi = "*"
first = "*"
graphql-utils = ">=0.4"
gunicorn = {extras = ["setproctitle"], version = "*"}
hiredis = "*"
honcho = "*"
httpx = {version = ">=0.20.0", extras = ["http2"]}
jinja2 = "*"
markdownify = "*"
msgpack = ">=1.0.0"
pyjwt = "*"
python-dotenv = "*"
python-multipart = "*"
pyyaml = "*"
redis = ">=4.3.5,!=4.5.2"
sentry-sdk = {extras = ["fastapi", "starlette"], version = ">=1.9.0,<1.18.0"}
tenacity = ">=8.2.1"
uvicorn = {extras = ["standard"], version = "*"}
voluptuous = "*"
setproctitle = {version = "<1.3.0"}
imia = "*"
starsessions = "^2.1.1"
Authlib = "^1.2.0"
sqlalchemy = {version = ">=1.4", extras = ["asyncio", "postgresql_psycopg", "mypy"]}
sqlalchemy-utils = {version = ">=0.37.0", extras = ["encrypted", "password"]}
# NOTE(sileht): sqlalchemy does not install binary for psycopg > 3
psycopg = { version = ">=3.1", extras = ["binary"] }
# NOTE(sileht): sqlalchemy does not install it for some architecture like mac/m1...
greenlet = "^2.0.2"
deepdiff = "^6.3.0"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}

[tool.poetry.dev-dependencies]
sphinx = "^6.1.3"
sphinxcontrib-spelling = "^8.0.0"
respx = "^0.20.0"
semgrep = "^1.15.0"
types-first = "^2.0.5"
types-freezegun = "^1.1.10"
types-pkg-resources = "^0.1.3"
types-pyyaml = "^6.0.12"
types-redis = "^4.5.3"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
pytest-github-actions-annotate-failures = "^0.1.7"
pytest-timeout = "^2.1.0"
isort = "^5.12.0"
mypy = "^1.0"
mypy-extensions = "^1.0.0"
vcrpy = ">=4.1.1"
flake8 = "^6.0.0"
flake8-black = "^0.3.3"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.0.0"
flake8-comprehensions = "^3.11.1"
flake8-docstrings = "^1.7.0"
flake8-logging-format = "^0.9.0"
flake8-rst-docstrings = "^0.3.0"
flake8-use-fstring = "^1.4"
freezegun = "^1.2.2"
yamllint = "^1.30.0"
reno = "^4.0.0"
anys = "^0.2.1"
pytest-split = "^0.8.0"
tryceratops = "^1.1.0"
flake8-pep585 = "^0.1.7"
flake8-new-union-types = "^0.4.1"
pytest-xdist = "^3.2.1"
yesqa = "^1.4.0"
asgi-lifespan = "^2.0.0"
filelock = "^3.10.2"
poethepoet = "^0.19.0"
pytest-rerunfailures = "^11.1"

[tool.poetry.scripts]
  mergify-database-update = "mergify_engine.models.manage:database_update"
  mergify-refresher = "mergify_engine.cli:refresher_cli"
  mergify-clear-token-cache = "mergify_engine.cli:clear_token_cache"
  mergify-debug = "mergify_engine.debug:main"
  mergify-stream-status = "mergify_engine.workers.stream_cli:status"
  mergify-stream-reschedule = "mergify_engine.worker.stream_cli:reschedule_now"
  mergify-engine-worker = "mergify_engine.worker.manager:main"
  mergify-import-check-worker = "mergify_engine.import_check:import_check_worker"
  mergify-import-check-web = "mergify_engine.import_check:import_check_web"
  mergify-count-seats = "mergify_engine.count_seats:main"
  mergify-openapi-spec = "mergify_engine.web.api.root:generate_openapi_spec"
  mergify-admin = "mergify_engine.admin:main"
  mergify-ci-dump = "mergify_engine.cli:dump_handler"
  mergify-ci-global-insight = "mergify_engine.cli:global_insight_handler"
  # TODO(sileht): compat, drop me
  mergify-import-check = "mergify_engine.import_check:import_check_worker"
  mergify-redis-dump = "mergify_engine.redis_tools.dumper:main"

[tool.poetry.plugins]

[tool.poetry.plugins.mergify_signals]
  noop = "mergify_engine.signals:NoopSignal"
  last_seen = "mergify_engine.usage.last_seen:Signal"
  datadog = "mergify_engine._datadog:Signal"
  eventlogs = "mergify_engine.eventlogs:EventLogsSignal"
  queue_statistics = "mergify_engine.queue.statistics:StatisticsSignal"
  queue_statistics_accuracy = "mergify_engine.queue.statistics_accuracy:StatisticsAccuracyMeasurement"

[tool.poetry.plugins.mergify_actions]
  assign = "mergify_engine.actions.assign:AssignAction"
  backport = "mergify_engine.actions.backport:BackportAction"
  close = "mergify_engine.actions.close:CloseAction"
  comment = "mergify_engine.actions.comment:CommentAction"
  copy = "mergify_engine.actions.copy:CopyAction"
  delete_head_branch = "mergify_engine.actions.delete_head_branch:DeleteHeadBranchAction"
  dismiss_reviews = "mergify_engine.actions.dismiss_reviews:DismissReviewsAction"
  edit = "mergify_engine.actions.edit:EditAction"
  label = "mergify_engine.actions.label:LabelAction"
  merge = "mergify_engine.actions.merge:MergeAction"
  post_check = "mergify_engine.actions.post_check:PostCheckAction"
  queue = "mergify_engine.actions.queue:QueueAction"
  rebase = "mergify_engine.actions.rebase:RebaseAction"
  request_reviews = "mergify_engine.actions.request_reviews:RequestReviewsAction"
  review = "mergify_engine.actions.review:ReviewAction"
  squash = "mergify_engine.actions.squash:SquashAction"
  update = "mergify_engine.actions.update:UpdateAction"

[tool.poetry.plugins.mergify_commands]
  backport = "mergify_engine.actions.backport:BackportAction"
  copy = "mergify_engine.actions.copy:CopyAction"
  queue = "mergify_engine.actions.queue:QueueAction"
  rebase = "mergify_engine.actions.rebase:RebaseAction"
  refresh = "mergify_engine.actions.refresh:RefreshCommand"
  requeue = "mergify_engine.actions.requeue:RequeueCommand"
  squash = "mergify_engine.actions.squash:SquashAction"
  unqueue = "mergify_engine.actions.unqueue:UnqueueCommand"
  update = "mergify_engine.actions.update:UpdateAction"


[tool.poetry.group.dev.dependencies]
sphinxcontrib-jquery = "^4.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --durations=10"
asyncio_mode = "auto"
markers = ["recorder", "subscription"]
filterwarnings = [
    "error",
    # FIXME(sileht): no idea where it comes from, backtraces are cryptic
    #  ResourceWarning: unclosed <socket.socket fd=14, family=AddressFamily.AF_UNIX, type=SocketKind.SOCK_STREAM, proto=0>
    "ignore::ResourceWarning",
    # NOTE(sileht): until https://github.com/kvesteri/sqlalchemy-utils/issues/646 is fixed and released
    "ignore:'crypt' is deprecated and slated for removal:DeprecationWarning",
    # sqlalchemy 2.0 warning
    "ignore:.*sqlalchemy.orm.mapper().*:sqlalchemy.exc.SADeprecationWarning"
]

[tool.poe]
include = ["poe.toml"]

[tool.black]
target-version = ['py311']

[tool.mypy]
strict = true
warn_unreachable = true
exclude = [".venv"]
files = ["mergify_engine"]
show_error_codes = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
       "deepdiff.*",
       "vcr.*",
       "voluptuous.*",
       "msgpack.*",
       "bs4.*",
       "graphql_utils",
       "markdownify",
       "asgi_lifespan",
       "authlib.*",
       "imia.*",
       "starsessions.*",
       "sqlalchemy_utils.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = "2"
force_sort_within_sections = true
known_first_party = "mergify_engine"
known_third_party = "datadog"
default_section = "THIRDPARTY"
